[metadata]
name = pbkdvault
description = PKBDVault to keep secrest
author = Kalle M. Aagaard
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    pbkdvault
install_requires =
    pbkdf2>=1.3
    pycryptodome>=3.11
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9

[options.package_data]
pbkdvault = py.typed

[flake8]
max-line-length = 160